src/soca/Fortran.h

  class Configuration;
  class DateTime;
  // Geometry key type
  typedef int F90geom;
  // Fields key type
  typedef int F90flds;
    // -----------------------------------------------------------------------------
    //  Fields
    // -----------------------------------------------------------------------------
    void soca_field_create_f90(F90flds &, const F90geom &,
                               const eckit::Configuration * const *);
    void soca_field_delete_f90(F90flds &);
    void soca_field_copy_f90(const F90flds &, const F90flds &);
    void soca_field_zero_f90(const F90flds &);
    void soca_field_self_add_f90(const F90flds &, const F90flds &);
    void soca_field_self_sub_f90(const F90flds &, const F90flds &);
    void soca_field_self_mul_f90(const F90flds &, const double &);
    void soca_field_axpy_f90(const F90flds &, const double &, const F90flds &);
    void soca_field_dot_prod_f90(const F90flds &, const F90flds &, double &);
    void soca_field_self_schur_f90(const F90flds &, const F90flds &);
    void soca_field_random_f90(const F90flds &);
    void soca_field_dirac_f90(const F90flds &,
                              const eckit::Configuration * const *);
    void soca_field_add_incr_f90(const F90flds &, const F90flds &);
    void soca_field_diff_incr_f90(const F90flds &, const F90flds &,
                                  const F90flds &);
    void soca_field_change_resol_f90(const F90flds &, const F90flds &);
    void soca_field_read_file_f90(const F90flds &,
                                  const eckit::Configuration * const *,
                                  util::DateTime * const *);
    void soca_field_ug_coord_f90(const F90flds &, const int &);
    void soca_field_field_to_ug_f90(const F90flds &,
                                    const int &,
                                    const int &);
    void soca_field_field_from_ug_f90(const F90flds &,
                                      const int &,
                                      const int &);